fix: delete overflow main.css

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,6 @@
     box-sizing: border-box;
     text-decoration: none;
     font-family: 'Poppins', 'Roboto', monospace;
-    overflow: inherit !important;
 }
 
 
